Refact layout to search

--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -1,35 +1,17 @@
-<div id="<%= dom_id profile %>">
+<div id="<%= dom_id profile %>" style="display: flex; gap: 20px; flex-wrap: nowrap; overflow-x: auto;">
   <p>
     <strong>Name:</strong>
     <%= profile.name %>
-  </p>
-
-  <p>
     <strong>Following:</strong>
     <%= profile.following %>
-  </p>
-
-  <p>
     <strong>Followers:</strong>
     <%= profile.followers %>
-  </p>
-
-  <p>
     <strong>Stars:</strong>
     <%= profile.stars %>
-  </p>
-
-  <p>
     <strong>Repos:</strong>
     <%= profile.repos %>
-  </p>
-
-  <p>
     <strong>Address:</strong>
     <%= profile.address %>
-  </p>
-
-  <p>
     <strong>Company:</strong>
     <%= profile.company %>
   </p>
