Refact improvements in parameters

--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -1,19 +1,16 @@
-<div id="<%= dom_id profile %>" style="display: flex; gap: 20px; flex-wrap: nowrap; overflow-x: auto;">
-  <p>
-    <strong>Name:</strong>
-    <%= profile.name %>
-    <strong>Following:</strong>
-    <%= profile.following %>
-    <strong>Followers:</strong>
-    <%= profile.followers %>
-    <strong>Stars:</strong>
-    <%= profile.stars %>
-    <strong>Repos:</strong>
-    <%= profile.repos %>
-    <strong>Address:</strong>
-    <%= profile.address %>
-    <strong>Company:</strong>
-    <%= profile.company %>
-  </p>
-
+<div id="<%= dom_id profile %>">
+  <strong>Name:</strong>
+  <%= profile.name %>
+  <strong>Following:</strong>
+  <%= profile.following %>
+  <strong>Followers:</strong>
+  <%= profile.followers %>
+  <strong>Stars:</strong>
+  <%= profile.stars %>
+  <strong>Repos:</strong>
+  <%= profile.repos %>
+  <strong>Address:</strong>
+  <%= profile.address %>
+  <strong>Company:</strong>
+  <%= profile.company %>
 </div>
